--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
     },
     "dependencies": {
         "@inertiajs/inertia": "^0.11.1",
-        "react-router-dom": "^7.5.1"
+        "framer-motion": "^12.9.2",
+        "gsap": "^3.12.7",
+        "react-icons": "^5.5.0",
+        "react-router-dom": "^7.5.1",
+        "recharts": "^2.15.3"
     }
 }
